--- a/app-viajes/index.html
+++ b/app-viajes/index.html
@@ -3,6 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/luggage.svg" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet" />
+        <!-- body font -->
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
+        <!-- LOGOS -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Travel MA</title>
     </head>
@@ -11,3 +24,4 @@
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
+
